<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bluetooth And Wifi</string>
    <string name="connect_wifi">Connect Wi-Fi</string>
    <string name="connect_bluetooth">Connect BT</string>
    <string name="text_message">Text</string>
    <string name="text_photo">Photo</string>
    <string name="text_voice_message">Voice</string>
    <string name="send">Send</string>
    <string name="btn_attach">Attach</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="image_description">Photo from the gallery</string>
    <string name="visualizer_hint">Visualizer for the music play</string>
    <string name="file_name_hint">Name of the recorded File</string>
    <string name="message_hint">Type message here</string>
    <string name="status_hint">Connected/Disconnected</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop">Stop</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan Devices</string>
    <string name="select_device">Select a device</string>
    <string name="none_found">No devices found</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="not_connected">Not connected to any device</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

</resources>
